# otter-buddy-old

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
otter_buddy/: __main__.py  constants.py
otter_buddy/cogs/: help.py  interview_match.py  interview_reminder.py  logging.py  meta.py  misc.py
otter_buddy/data/: db_email.py  dbconn.py
otter_buddy/utils/: common.py  discord_common.py  tasks.py
otter_buddy/utils/db/: db_email.py  db_interview_match.py  db_interview_reminder.py  dbconn.py
otter_buddy/utils/email/: emailconn.py
tests/: conftest.py  test_otter_buddy.py
tests/test_data/: test_db_email.py
tests/test_discord/: test_interview_match.py  test_interview_reminder.py  test_misc.py
tests/test_utils/: test_common.py
tests/test_utils/test_db/: test_db_email.py  test_db_interview_match.py
tests/test_utils/test_email/: test_emailconn.py
